update tank mage html

--- a/tank.html
+++ b/tank.html
@@ -36,37 +36,38 @@
       <table>
         <tr>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/akai.jpg"></td>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/atlas.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/balmond.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/baxia.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/belerick.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/esmeralda.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/franco.jpg"></td>
         </tr>
         <tr>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Akai</button></a></td>
+          <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Atlas</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Balmond</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Baxia</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Belerick</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Esmeralda</button></a></td>
-          <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Franco</button></a></td>
         </tr>
         <tr>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/franco.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/gatotkaca.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/grock.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/hilda.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/hylos.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/johnson.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/khufra.jpg"></td>
         </tr>
         <tr>
+          <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Franco</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Gatotkaca</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Grock</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Hilda</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Hylos</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Johnson</button></a></td>
-          <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Khufra</button></a></td>
         </tr>
         <tr>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/khufra.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/lolita.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/masha.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/minotaur.jpg"></td>
@@ -74,6 +75,7 @@
           <td><img class="img-fluid" style="width:100%" src="mlheroes/uranus.jpg"></td>
         </tr>
         <tr>
+          <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Khufra</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Lolita</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Masha</button></a></td>
           <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Minotaur</button></a></td>
