--- a/mage.html
+++ b/mage.html
@@ -37,73 +37,77 @@
         <tr>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/alice.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/aurora.jpg"></td>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/cecilion.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/chang-e.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/cyclops.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/esmeralda.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/eudora.jpg"></td>
         </tr>
         <tr>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Alice</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Aurora</button></a></td>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Cecilion</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Chang'e</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Cyclops</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Esmeralda</button></a></td>
-          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Eudora</button></a></td>
         </tr>
         <tr>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/eudora.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/faramis.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/gord.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/guinevere.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/gusion.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/harith.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/harley.jpg"></td>
         </tr>
         <tr>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Eudora</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Faramis</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Gord</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Guinevere</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Gusion</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Harith</button></a></td>
-          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Harley</button></a></td>
         </tr>
         <tr>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/harley.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/kadita.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/kagura.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/karina.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/kimmy.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/lunox.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/lylia.jpg"></td>
         </tr>
         <tr>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Harley</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Kadita</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Kagura</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Karina</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Kimmy</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Lunox</button></a></td>
-          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Lylia</button></a></td>
         </tr>
         <tr>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/luo yi.jpg"></td>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/lylia.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/nana.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/odette.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/pharsa.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/selena.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/silvana.jpg"></td>
-          <td><img class="img-fluid" style="width:100%" src="mlheroes/vale.jpg"></td>
         </tr>
         <tr>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Luo Yi</button></a></td>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Lylia</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Nana</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Odette</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Pharsa</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Selena</button></a></td>
-          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Silvana</button></a></td>
-          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Vale</button></a></td>
         </tr>
         <tr>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/silvana.jpg"></td>
+          <td><img class="img-fluid" style="width:100%" src="mlheroes/vale.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/valir.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/vexana.jpg"></td>
           <td><img class="img-fluid" style="width:100%" src="mlheroes/zhask.jpg"></td>
         </tr>
         <tr>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Silvana</button></a></td>
+          <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Vale</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Valir</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Vexana</button></a></td>
           <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Zhask</button></a></td>
