footer for tank html

--- a/heroes.html
+++ b/heroes.html
@@ -43,7 +43,7 @@
             <td><img class="img-fluid" style="width:100%" src="mlheroes/angela.jpg"></td>
           </tr>
           <tr>
-            <td><a ><button type="button" id="btnhover">Akai</button></a></td>
+            <td><a><button type="button" id="btnhover">Akai</button></a></td>
             <div id="myModal" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
@@ -51,7 +51,14 @@
               <img src="psskills/akaiskills.jpg" alt="Akai">
             </div>
             </div>
-            <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Aldous</button></a></td>
+            <td><a><button type="button" id="btnhover">Aldous</button></a></td>
+            <div id="myModal1" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <img src="mlheroes/aldous.jpg" alt="Aldous">
+            </div>
+            </div>
             <td><a onclick="window.open('lolita.html')"><button type="button" id="btnhover">Alice</button></a></td>
             <td><a onclick="window.open('estes.html')"><button type="button" id="btnhover">Alpha</button></a></td>
             <td><a onclick="window.open('angela.html')"><button type="button" id="btnhover">Alucard</button></a></td>
